--- a/templates/settings.json.erb
+++ b/templates/settings.json.erb
@@ -25,16 +25,17 @@
     "lazy-bitfield-enabled": true, 
     "lpd-enabled": true, 
     "max-peers-global": 200, 
-    "message-level": 2, 
+    "message-level": 1, 
     "open-file-limit": 32, 
     "peer-congestion-algorithm": "", 
+    "peer-id-ttl-hours": 6,
     "peer-limit-global": 240, 
     "peer-limit-per-torrent": 60, 
     "peer-port": <%= @peer_port %>, 
     "peer-port-random-high": 65535, 
     "peer-port-random-low": 49152, 
     "peer-port-random-on-start": false, 
-    "peer-socket-tos": 0, 
+    "peer-socket-tos": "default", 
     "pex-enabled": true, 
     "port-forwarding-enabled": <%= @upnp %>,
     "preallocation": 1, 
